// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageFailure render component not found failure should render a category not found failure and match snapshot 1`] = `
<Translate(Failure)
  errorMessage="not-found.category"
  goToAction={
    Object {
      "payload": Object {
        "categoryPath": undefined,
        "city": "augsburg",
        "language": "de",
      },
      "type": "CATEGORIES",
    }
  }
  goToMessage="goTo.categories"
/>
`;

exports[`LanguageFailure render component not found failure should render a event not found failure and match snapshot 1`] = `
<Translate(Failure)
  errorMessage="not-found.event"
  goToAction={
    Object {
      "payload": Object {
        "city": "augsburg",
        "eventId": undefined,
        "language": "de",
      },
      "type": "EVENTS",
    }
  }
  goToMessage="goTo.events"
/>
`;

exports[`LanguageFailure render component not found failure should render a extra not found failure and match snapshot 1`] = `
<Translate(Failure)
  errorMessage="not-found.extra"
  goTo={
    Object {
      "payload": Object {
        "city": "augsburg",
        "extraAlias": undefined,
        "language": "de",
      },
      "type": "EXTRAS",
    }
  }
  goToMessage="goTo.extras"
/>
`;

exports[`LanguageFailure should render a LanguageFailure if there is a LanguageNotFoundError 1`] = `
<Connect(Translate(LanguageFailure))
  city="augsburg"
/>
`;

exports[`LanguageFailure should render a content not found failure if there is a ContentNotFoundError 1`] = `
<Translate(Failure)
  errorMessage="not-found.extra"
  goTo={
    Object {
      "payload": Object {
        "city": "augsburg",
        "extraAlias": undefined,
        "language": "de",
      },
      "type": "EXTRAS",
    }
  }
  goToMessage="goTo.extras"
/>
`;

exports[`LanguageFailure should render a failure as default 1`] = `
<Translate(Failure)
  errorMessage="error message"
/>
`;
